[gd_scene load_steps=9 format=3 uid="uid://bsr815inei87h"]

[ext_resource type="Script" uid="uid://eq0fpvsqluub" path="res://camp_cad/main_camp_cad_v2.gd" id="1_yx8g7"]
[ext_resource type="Script" uid="uid://dhswx8gl50jui" path="res://camp_cad/obj_camp_cad_v2.gd" id="3_0uo3h"]
[ext_resource type="Theme" uid="uid://8xl1vqs4t5v1" path="res://themes/panel.tres" id="3_mxpnc"]
[ext_resource type="Theme" uid="uid://bu42yi3aglkrt" path="res://themes/ButtonsTheme.tres" id="4_5kobp"]
[ext_resource type="Script" uid="uid://c2aiu7edqjfuw" path="res://camp_cad/object_template.gd" id="4_w5atx"]
[ext_resource type="Script" uid="uid://5dml3k2u17fl" path="res://camp_cad/utils_camp_cad_v2.gd" id="4_wlmjr"]
[ext_resource type="Script" uid="uid://bct8hib12tlmo" path="res://camp_cad/canvas_camp_cad_v2.gd" id="5_edxxk"]
[ext_resource type="Script" uid="uid://b7jtiibbu2iiy" path="res://camp_cad/button_connections_camp_cad_v2.gd" id="6_gbi8r"]

[node name="Camp Cad V2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yx8g7")

[node name="Scripts" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Utils" type="Control" parent="Scripts"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_wlmjr")

[node name="Obj" type="Control" parent="Scripts"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_0uo3h")

[node name="Object_Template" type="Control" parent="Scripts"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_w5atx")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_mxpnc")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
theme = ExtResource("3_mxpnc")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top Tabs Panel" type="Panel" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme = ExtResource("3_mxpnc")

[node name="Top Tabs" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/Top Tabs Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_right = 0.99
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="New Object" type="Button" parent="Panel/VBoxContainer/Panel/VBoxContainer/Top Tabs Panel/Top Tabs"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme = ExtResource("4_5kobp")
text = "New Object"

[node name="Edit" type="Button" parent="Panel/VBoxContainer/Panel/VBoxContainer/Top Tabs Panel/Top Tabs"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme = ExtResource("4_5kobp")
text = "Edit"

[node name="Tabs Content Panel" type="Panel" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
theme = ExtResource("3_mxpnc")

[node name="New Object Tab" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_right = 0.99
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
script = ExtResource("6_gbi8r")

[node name="New Tent Container" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
alignment = 1

[node name="Mod Tent Button" type="Button" parent="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab/New Tent Container"]
layout_mode = 2
theme = ExtResource("4_5kobp")
text = "Mod Tent"
alignment = 0

[node name="HQSS Button" type="Button" parent="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab/New Tent Container"]
layout_mode = 2
theme = ExtResource("4_5kobp")
text = "HQSS"
alignment = 0

[node name="Num Section Label" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab/New Tent Container"]
layout_mode = 2
text = "Section(s) : 4"

[node name="Num Section Slider" type="HSlider" parent="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab/New Tent Container"]
layout_mode = 2
min_value = 1.0
max_value = 4.0
value = 4.0
rounded = true

[node name="New Generator Container" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
alignment = 1

[node name="30kw Button" type="Button" parent="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab/New Generator Container"]
layout_mode = 2
theme = ExtResource("4_5kobp")
text = " 30KW Gen"
alignment = 0

[node name="60kw Button" type="Button" parent="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab/New Generator Container"]
layout_mode = 2
theme = ExtResource("4_5kobp")
text = " 60KW Gen"
alignment = 0

[node name="Edit Tab" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Delete Objects Button" type="Button" parent="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/Edit Tab"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme = ExtResource("4_5kobp")
text = "Delete
Object(s)"

[node name="Move Objects Button" type="Button" parent="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/Edit Tab"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme = ExtResource("4_5kobp")
text = "Move
Object(s)"

[node name="Canvas" type="Panel" parent="Panel/VBoxContainer"]
show_behind_parent = true
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.85
theme = ExtResource("3_mxpnc")
script = ExtResource("5_edxxk")

[node name="Origin" type="Control" parent="Panel/VBoxContainer/Canvas"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Objects Container" type="Control" parent="Panel/VBoxContainer/Canvas/Origin"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Selector" type="ColorRect" parent="Panel/VBoxContainer/Canvas"]
layout_mode = 0
offset_left = 65.0
offset_top = -524.0
offset_right = 105.0
offset_bottom = -484.0

[connection signal="pressed" from="Panel/VBoxContainer/Panel/VBoxContainer/Top Tabs Panel/Top Tabs/New Object" to="." method="_on_new_object_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Panel/VBoxContainer/Top Tabs Panel/Top Tabs/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab/New Tent Container/Mod Tent Button" to="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab" method="_on_mod_tent_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab/New Tent Container/HQSS Button" to="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab" method="_on_hqss_button_pressed"]
[connection signal="value_changed" from="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab/New Tent Container/Num Section Slider" to="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab" method="_on_num_section_slider_value_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab/New Generator Container/30kw Button" to="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab" method="_on_30kw_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab/New Generator Container/60kw Button" to="Panel/VBoxContainer/Panel/VBoxContainer/Tabs Content Panel/New Object Tab" method="_on_kw_button_pressed"]
